Add NSGAII note yaml setting

--- a/_posts/2024-05-05-NSGA-II.md
+++ b/_posts/2024-05-05-NSGA-II.md
@@ -1,3 +1,13 @@
+---
+layout:       post
+title:        "NSGA-II"
+author:       "Nancycy"
+header-style: text
+catalog:      true
+mathjax:      true
+tags:
+    - optimization
+---
 
 Paper: (2002) A fast and elitist multiobjective genetic algorithm- NSGA-II
 
