add TF-IDF blog v2

--- a/_posts/2024-05-26-TF-IDF.md
+++ b/_posts/2024-05-26-TF-IDF.md
@@ -1,12 +1,12 @@
 ---
 layout:       post
-title:        "TF-IDF"
+title:        "Term frequency - inverse document frequency (TF-IDF)"
 author:       "Nancycy"
 header-style: text
 catalog:      true
 mathjax:      true
 tags:
-    - optimization
+    - algorithm
 ---
 
 ## Term frequency - inverse document frequency
